--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -24,6 +24,33 @@
                     Ne pare rau! Nu am gasit produsul cautat!
                 </div>
             </div>
+
+            <!-- inceput subsol -->
+
+            <div class="footer-pagination">
+                <div class="row">
+                    <div class="col-md-6"></div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-9" style="padding-left: 30%">
+                                <!-- parametri din componenta ngb pagination la stanga-->
+                                <!-- proprietatile din productListComponent la dreapta-->
+                                <ngb-pagination 
+                                                [(page)]="thePageNumber" 
+                                                [pageSize]="thePageSize"
+                                                [collectionSize]="theTotalElements"
+                                                (pageChange)="listProducts()"> <!-- event-binding-->
+
+                                </ngb-pagination>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- sfarsit subsol-->
         </div>
     </div>
 </div>
+
+
+
