--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -1,31 +1,73 @@
 <div class="main-content">
     <div class="section-content setion-content-p30">
         <div class="container-fluid">
-            <table class="table table-bordered">
-                <tr>
-                     <th width="20%"> Product Image</th>
-                     <th width="50%"> Product Detail</th>
-                     <th width="30%"> </th>
-            </tr>
-            <tr *ngFor="let tempCartItem of cartItems">
-                <td>
-                    <img src="{{ tempCartItem.imageUrl }}" class="img-responsive" width="150px"/>
-                </td>
 
-                <td>
-                    <p>{{ tempCartItem.name}} </p>
-                    <p>{{ tempCartItem.unitPrice | currency: 'RON '}} </p>
-                </td>
+            <div *ngIf="cartItems.length>0">
 
-                <td>
-                    <div class="item">
-                        <label> Cantitate: </label> {{ tempCartItem.quantity}}
+                <table class="table table-bordered">
+                    <tr>
+                        <th width="20%"> </th>
+                        <th width="50%"> Produse </th>
+                        <th width="30%"> </th>
+                    </tr>
+                    <tr *ngFor="let tempCartItem of cartItems">
+                        <td>
+                            <img src="{{ tempCartItem.imageUrl }}" class="img-responsive" width="150px" />
+                        </td>
 
-                    </div>
-                </td>
-            </tr>
-            </table>
+                        <td>
+                            <p>{{ tempCartItem.name}} </p>
+                            <p>{{ tempCartItem.unitPrice | currency: 'RON '}} </p>
+                        </td>
+
+                        <td>
+                            <div class="item">
+                                <label> Produse: </label> 
+
+                                <div class="row no-gutters">
+                                    <div class="col">
+                                        <button (click)="incrementQuantity(tempCartItem)" class="btn btn-primary btn-sm">
+                                            <i class="fas fa-plus"></i>
+                                        </button>
+                                    </div>
+                                    
+                                    <div class="col-1"></div>
+
+                                    <div class="col ml-4 mr-2">
+                                        {{ tempCartItem.quantity}}
+                                    </div>
+
+                                    <div class="col">
+                                        <button (click)="decrementQuantity(tempCartItem)" class="btn btn-primary btn-sm">
+                                            <i class="fas fa-minus"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <button (click)="remove(tempCartItem)" class="btn btn-primary btn-sm mt-2"> Eliminare din cos </button>
+
+                            <p class="mt-2"> Subtotal: {{ tempCartItem.quantity * tempCartItem.unitPrice | currency:
+                                'RON ' }}</p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td colspan="2"></td>
+                        <td style="font-weight: bold">
+                            <p> Total produse: {{ totalQuantity}}</p>
+                            <p> Transport: GRATUIT</p>
+                            <p> Pret total: {{totalPrice | currency: 'RON '}}</p>
+                            <a routerLink="/checkout" class="btn btn-primary"> Finalizare comanda </a>
+                        </td>
+                    </tr>
+                </table>
+
+            </div>
+
+            <div *ngIf="cartItems.length ==0" class="alert alert-warning col-md-12" role="alert">
+                Cosul tau este gol!
+            </div>
         </div>
     </div>
 </div>
-
