formular checkout (tari si orase)

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -48,8 +48,10 @@
                         <div class="col-md-2"> <label> Tara </label> </div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
-                                    <option> </option>
+                                <select formControlName="country"(change)="getStates('shippingAddress')">
+                                    <option *ngFor="let country of countries" [ngValue]="country"> 
+                                        {{ country.name }}
+                                    </option>
                                 </select>
 
                             </div>
@@ -81,7 +83,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="state">
-                                    <option> </option>
+                                    <option *ngFor="let state of shippingAddressStates" [ngValue]="state"> 
+                                        {{ state.name }} 
+                                    </option>
                                 </select>
 
                             </div>
@@ -118,7 +122,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="country">
-                                    <option> </option>
+                                    <option *ngFor="let country of countries"[ngValue]="country"> 
+                                        {{ country.name }}
+                                    </option>
                                 </select>
 
                             </div>
@@ -220,7 +226,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="expirationMonth">
-                                    <option> iunie </option>
+                                    <option *ngFor="let month of creditCardMonths">
+                                    {{ month }}    
+                                    </option>
                                     
                                 </select>
 
@@ -232,11 +240,11 @@
                         <div class="col-md-2"> <label> Anul expirarii </label> </div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="expirationYear">
-                                    <option> 2000 </option>
-                                    
+                                <select formControlName="expirationYear" (change)="handleMonthsAndYears()">
+                                    <option *ngFor="let year of creditCardYears"> 
+                                        {{ year }}
+                                         </option>
                                 </select>
-
                             </div>
                         </div>
                     </div>
