secure front end, finalizare/corectare

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -339,7 +339,7 @@
                                         Nu ati introdus numarul cardului!
                                     </div>
                                     <div *ngIf="creditCardNumber.errors.pattern">
-                                        Numarul cardului introdus trebuie sa contina cel putin 16 caractere!
+                                        Numarul cardului introdus trebuie sa contina 16 caractere!
                                     </div>
                                 </div>
 
