--- a/src/app/components/login-status/login-status.component.html
+++ b/src/app/components/login-status/login-status.component.html
@@ -8,7 +8,7 @@
 
     <button *ngIf="isAuthenticated" (click)="logout()" class="security-btn">Logout</button>
 
-    <button *ngIf="!isAuthenticated" routerLink="/order-history" class="security-btn ml-1">Comenzi</button>
+    <button *ngIf="isAuthenticated" routerLink="/order-history" class="security-btn ml-1">Comenzi</button>
 
     
 
